mule-user-guide/v/3.7/_toc.adoc
// Mule User Guide 3.7 TOC

* link:/mule-user-guide/v/3.7/index[Mule User Guide]
** link:/mule-user-guide/v/3.7/installing[Installing]
*** link:/mule-user-guide/v/3.7/hardware-and-software-requirements[Hardware and Software Requirements]
*** link:/mule-user-guide/v/3.7/downloading-and-starting-mule-esb[Downloading and Starting Mule ESB]
*** link:/mule-user-guide/v/3.7/adding-community-runtime[Adding Community Runtime]
*** link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Installing an Enterprise License]
*** link:/mule-user-guide/v/3.7/installing-extensions[Installing Extensions]
*** link:/mule-user-guide/v/3.7/studio-update-sites[Studio Update Sites]
*** link:/mule-user-guide/v/3.7/studio-in-eclipse[Studio in Eclipse]
*** link:/mule-user-guide/v/3.7/third-party-software-in-mule[Third Party Software in Mule]
** link:/mule-user-guide/v/3.7/developing[Developing]
*** link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint Connectors]
**** link:/mule-user-guide/v/3.7/connectors-user-guide[Connectors User Guide]
***** link:/mule-user-guide/v/3.7/installing-connectors[Installing Connectors]
***** link:/mule-user-guide/v/3.7/connector-configuration-reference[Connector Configuration Reference]
***** link:/mule-user-guide/v/3.7/working-with-multiple-versions-of-connectors[Working with Multiple Versions of Connectors]
***** link:/mule-user-guide/v/3.7/using-a-connector-to-access-an-oauth-api[Using a Connector to Access an OAuth API]
***** link:/mule-user-guide/v/3.7/auto-paging-in-anypoint-connectors[Auto-Paging in Anypoint Connectors]
**** link:/mule-user-guide/v/3.7/ajax-connector[Ajax Connector]
**** link:/mule-user-guide/v/3.7/amazon-s3-connector[Amazon S3 Connector]
**** link:/mule-user-guide/v/3.7/amazon-sns-connector[Amazon SNS Connector]
**** link:/mule-user-guide/v/3.7/amazon-sqs-connector[Amazon SQS Connector]
**** link:/mule-user-guide/v/3.7/amqp-connector[AMQP Connector]
***** link:/mule-user-guide/v/3.7/amqp-connector-examples[AMQP Connector Examples]
***** link:/mule-user-guide/v/3.7/amqp-connector-reference[AMQP Connector Reference]
**** link:/mule-user-guide/v/3.7/cassandra-connector[Cassandra Connector]
**** link:/mule-user-guide/v/3.7/cmis-connector[CMIS Connector]
**** link:/mule-user-guide/v/3.7/concur-connector[Concur Connector]
**** link:/mule-user-guide/v/3.7/database-connector[Database Connector]
***** link:/mule-user-guide/v/3.7/database-connector-examples[Database Connector Examples]
***** link:/mule-user-guide/v/3.7/database-connector-reference[Database Connector Reference]
**** link:/mule-user-guide/v/3.7/dotnet-connector-guide[DotNet Connector Guide]
***** link:/mule-user-guide/v/3.7/dotnet-connector-user-guide[DotNet Connector User Guide]
***** link:/mule-user-guide/v/3.7/anypoint-extensions-for-visual-studio[Anypoint Extensions for Visual Studio]
***** link:/mule-user-guide/v/3.7/dotnet-connector-migration-guide[DotNet Connector Migration Guide]
***** link:/mule-user-guide/v/3.7/dotnet-connector-faqs[DotNet Connector FAQs]
**** link:/mule-user-guide/v/3.7/file-connector[File Connector]
**** link:/mule-user-guide/v/3.7/ftp-connector[FTP Connector]
**** link:/mule-user-guide/v/3.7/generic-connector[Generic Connector]
**** link:/mule-user-guide/v/3.7/hdfs-connector[HDFS Connector]
**** link:/mule-user-guide/v/3.7/http-connector[HTTP Connector]
***** link:/mule-user-guide/v/3.7/http-listener-connector[HTTP Listener Connector]
***** link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector]
***** link:/mule-user-guide/v/3.7/authentication-in-http-requests[Authentication in HTTP Requests]
***** link:/mule-user-guide/v/3.7/http-connector-reference[HTTP Connector Reference]
***** link:/mule-user-guide/v/3.7/tls-configuration[TLS Configuration]
***** link:/mule-user-guide/v/3.7/migrating-to-the-new-http-connector[Migrating to the New HTTP Connector]
**** link:/mule-user-guide/v/3.7/http-connector-deprecated[HTTP Connector - Deprecated]
**** link:/mule-user-guide/v/3.7/imap-connector[IMAP Connector]
**** link:/mule-user-guide/v/3.7/jdbc-connector[JDBC Connector]
**** link:/mule-user-guide/v/3.7/microsoft-dynamics-ax-2012-connector[Microsoft Dynamics AX 2012 Connector]
**** link:/mule-user-guide/v/3.7/microsoft-dynamics-crm-connector[Microsoft Dynamics CRM Connector]
**** link:/mule-user-guide/v/3.7/microsoft-service-bus-connector[Microsoft Service Bus Connector]
***** link:/mule-user-guide/v/3.7/microsoft-service-bus-connector-faq[Microsoft Service Bus Connector FAQ]
**** link:/mule-user-guide/v/3.7/microsoft-sharepoint-2013-connector[Microsoft SharePoint 2013 Connector]
**** link:/mule-user-guide/v/3.7/microsoft-sharepoint-2010-connector[Microsoft SharePoint 2010 Connector]
**** link:/mule-user-guide/v/3.7/mongodb-connector[MongoDB Connector]
***** link:/mule-user-guide/v/3.7/mongodb-connector-migration-guide[MongoDB Connector 4.0.2 Migration Guide]
**** link:/mule-user-guide/v/3.7/msmq-connector[MSMQ Connector]
***** link:/mule-user-guide/v/3.7/msmq-connector-user-guide[MSMQ Connector User Guide]
***** link:/mule-user-guide/v/3.7/windows-gateway-services-guide[Windows Gateway Services Guide]
***** link:/mule-user-guide/v/3.7/msmq-connector-faqs[MSMQ Connector FAQs]
**** link:/mule-user-guide/v/3.7/mule-paypal-anypoint-connector[PayPal Connector]
**** link:/mule-user-guide/v/3.7/netsuite-connector[NetSuite Connector]
**** link:/mule-user-guide/v/3.7/oracle-ebs-connector-user-guide[Oracle E-Business Suite Connector]
**** link:/mule-user-guide/v/3.7/peoplesoft-connector[PeopleSoft Connector]
**** link:/mule-user-guide/v/3.7/pop3-connector[POP3 Connector]
**** link:/mule-user-guide/v/3.7/quartz-connector[Quartz Connector]
**** link:/mule-user-guide/v/3.7/salesforce-analytics-cloud-connector[Salesforce Analytics Cloud Connector]
**** link:/mule-user-guide/v/3.7/salesforce-connector[Salesforce Connector]
***** link:/mule-user-guide/v/3.7/salesforce-connector-authentication[Salesforce Connector Authentication]
***** link:/mule-user-guide/v/3.7/salesforce-connector-reference[Salesforce Connector Reference]
***** link:/mule-user-guide/v/3.7/salesforce-contact-aggregation-example[Salesforce Contact Aggregation Example]
**** link:/mule-user-guide/v/3.7/sap-connector[SAP Connector]
**** link:/mule-user-guide/v/3.7/salesforce-marketing-cloud-connector[Salesforce Marketing Cloud Connector]
***** link:/mule-user-guide/v/3.7/sap-connector-advanced-features[SAP Connector Advanced Features]
***** link:/mule-user-guide/v/3.7/sap-connector-troubleshooting[SAP Connector Troubleshooting]
**** link:/mule-user-guide/v/3.7/servicenow-connector-5.0[ServiceNow Connector 5.0]
***** link:/mule-user-guide/v/3.7/servicenow-connector-5.0-migration-guide[ServiceNow Connector 5.0 Migration Guide]
**** link:/mule-user-guide/v/3.7/servicenow-connector[ServiceNow Connector 4.0]
**** link:/mule-user-guide/v/3.7/servlet-connector[Servlet Connector]
**** link:/mule-user-guide/v/3.7/sftp-connector[SFTP Connector]
**** link:/mule-user-guide/v/3.7/siebel-connector[Siebel Connector]
**** link:/mule-user-guide/v/3.7/successfactors-connector[SuccessFactors Connector]
**** link:/mule-user-guide/v/3.7/twilio-connector[Twilio Connector]
**** link:/mule-user-guide/v/3.7/twitter-connector[Twitter Connector]
**** link:/mule-user-guide/v/3.7/web-service-consumer[Web Service Consumer]
***** link:/mule-user-guide/v/3.7/web-service-consumer-reference[Web Service Consumer Reference]
**** link:/mule-user-guide/v/3.7/windows-powershell-connector-guide[Windows PowerShell Connector Guide]
**** link:/mule-user-guide/v/3.7/wmq-connector[WMQ Connector]
**** link:/mule-user-guide/v/3.7/workday-connector[Workday Connector 7.0]
**** link:/mule-user-guide/v/3.7/workday-connector-6.0[Workday Connector 6.0]
***** link:/mule-user-guide/v/3.7/workday-connector-6.0-migration-guide[Workday Connector 6.0 Migration Guide]
*** link:/mule-user-guide/v/3.7/components[Components]
**** link:/mule-user-guide/v/3.7/configuring-components[Configuring Components]
***** link:/mule-user-guide/v/3.7/configuring-java-components[Configuring Java Components]
***** link:/mule-user-guide/v/3.7/developing-components[Developing Components]
***** link:/mule-user-guide/v/3.7/entry-point-resolver-configuration-reference[Entry Point Resolver Configuration Reference]
***** link:/mule-user-guide/v/3.7/component-bindings[Component Bindings]
***** link:/mule-user-guide/v/3.7/using-interceptors[Using Interceptors]
**** link:/mule-user-guide/v/3.7/cxf-component-reference[CXF Component Reference]
**** link:/mule-user-guide/v/3.7/echo-component-reference[Echo Component Reference]
**** link:/mule-user-guide/v/3.7/expression-component-reference[Expression Component Reference]
**** link:/mule-user-guide/v/3.7/flow-reference-component-reference[Flow Reference Component Reference]
**** link:/mule-user-guide/v/3.7/http-static-resource-handler[HTTP Static Resource Handler]
**** link:/mule-user-guide/v/3.7/http-response-builder[HTTP Response Builder]
**** link:/mule-user-guide/v/3.7/invoke-component-reference[Invoke Component Reference]
**** link:/mule-user-guide/v/3.7/java-component-reference[Java Component Reference]
**** link:/mule-user-guide/v/3.7/logger-component-reference[Logger Component Reference]
***** link:/mule-user-guide/v/3.7/logging-in-mule[Logging in Mule]
**** link:/mule-user-guide/v/3.7/rest-component-reference[REST Component Reference]
**** link:/mule-user-guide/v/3.7/script-component-reference[Script Component Reference]
***** link:/mule-user-guide/v/3.7/groovy-component-reference[Groovy Component Reference]
***** link:/mule-user-guide/v/3.7/javascript-component-reference[JavaScript Component Reference]
***** link:/mule-user-guide/v/3.7/python-component-reference[Python Component Reference]
***** link:/mule-user-guide/v/3.7/ruby-component-reference[Ruby Component Reference]
*** link:/mule-user-guide/v/3.7/validations-module[Validators]
**** link:/mule-user-guide/v/3.7/building-a-custom-validator[Building a Custom Validator]
*** link:/mule-user-guide/v/3.7/filters[Filters]
**** link:/mule-user-guide/v/3.7/custom-filter[Custom Filter]
**** link:/mule-user-guide/v/3.7/exception-filter[Exception Filter]
**** link:/mule-user-guide/v/3.7/filter-ref[Filter Ref]
**** link:/mule-user-guide/v/3.7/json-schema-validator[JSON Schema Validator]
**** link:/mule-user-guide/v/3.7/logic-filter[Logic Filter]
**** link:/mule-user-guide/v/3.7/message-filter[Message Filter]
**** link:/mule-user-guide/v/3.7/message-property-filter[Message Property Filter]
**** link:/mule-user-guide/v/3.7/regex-filter[Regex Filter]
**** link:/mule-user-guide/v/3.7/schema-validation-filter[Schema Validation Filter]
**** link:/mule-user-guide/v/3.7/wildcard-filter[Wildcard Filter]
*** link:/mule-user-guide/v/3.7/routers[Routers]
**** link:/mule-user-guide/v/3.7/all-flow-control-reference[All Flow Control Reference]
**** link:/mule-user-guide/v/3.7/choice-flow-control-reference[Choice Flow Control Reference]
**** link:/mule-user-guide/v/3.7/scatter-gather[Scatter-Gather]
**** link:/mule-user-guide/v/3.7/splitter-flow-control-reference[Splitter Flow Control Reference]
*** link:/mule-user-guide/v/3.7/scopes[Scopes]
**** link:/mule-user-guide/v/3.7/async-scope-reference[Async Scope Reference]
**** link:/mule-user-guide/v/3.7/cache-scope[Cache Scope]
**** link:/mule-user-guide/v/3.7/foreach[Foreach]
**** link:/mule-user-guide/v/3.7/message-enricher[Message Enricher]
**** link:/mule-user-guide/v/3.7/poll-reference[Poll Reference]
***** link:/mule-user-guide/v/3.7/poll-schedulers[Poll Schedulers]
**** link:/mule-user-guide/v/3.7/request-reply-scope[Request-Reply Scope]
**** link:/mule-user-guide/v/3.7/transactional[Transactional]
**** link:/mule-user-guide/v/3.7/until-successful-scope[Until Successful Scope]
*** link:/mule-user-guide/v/3.7/transformers[Transformers]
**** link:/mule-user-guide/v/3.7/using-transformers[Using Transformers]
***** link:/mule-user-guide/v/3.7/transformers-configuration-reference[Transformers Configuration Reference]
***** link:/mule-user-guide/v/3.7/native-support-for-json[Native Support for JSON]
***** link:/mule-user-guide/v/3.7/xmlprettyprinter-transformer[XmlPrettyPrinter Transformer]
**** link:/mule-user-guide/v/3.7/dataweave[DataWeave]
***** link:/mule-user-guide/v/3.7/using-dataweave-in-studio[Using DataWeave in Studio]
***** link:/mule-user-guide/v/3.7/dataweave-reference-documentation[DataWeave Reference Documentation]
***** link:/mule-user-guide/v/3.7/dataweave-tutorial[DataWeave Tutorial]
***** link:/mule-user-guide/v/3.7/dataweave-examples[DataWeave Examples]
***** link:/mule-user-guide/v/3.7/dataweave-streaming[DataWeave Streaming]
***** link:/mule-user-guide/v/3.7/dataweave-migrator[DataWeave Migrator Tool]
**** link:/mule-user-guide/v/3.7/append-string-transformer-reference[Append String Transformer Reference]
**** link:/mule-user-guide/v/3.7/attachment-transformer-reference[Attachment Transformer Reference]
**** link:/mule-user-guide/v/3.7/expression-transformer-reference[Expression Transformer Reference]
**** link:/mule-user-guide/v/3.7/java-transformer-reference[Java Transformer Reference]
**** link:/mule-user-guide/v/3.7/object-to-xml-transformer-reference[Object to XML Transformer Reference]
**** link:/mule-user-guide/v/3.7/parse-template-reference[Parse Template Reference]
**** link:/mule-user-guide/v/3.7/property-transformer-reference[Property Transformer Reference]
**** link:/mule-user-guide/v/3.7/script-transformer-reference[Script Transformer Reference]
**** link:/mule-user-guide/v/3.7/session-variable-transformer-reference[Session Variable Transformer Reference]
**** link:/mule-user-guide/v/3.7/set-payload-transformer-reference[Set Payload Transformer Reference]
**** link:/mule-user-guide/v/3.7/variable-transformer-reference[Variable Transformer Reference]
**** link:/mule-user-guide/v/3.7/xml-to-object-transformer-reference[XML to Object Transformer Reference]
**** link:/mule-user-guide/v/3.7/xslt-transformer-reference[XSLT Transformer Reference]
**** link:/mule-user-guide/v/3.7/custom-metadata-tab[Custom Metadata Tab]
**** link:/mule-user-guide/v/3.7/creating-custom-transformers[Creating Custom Transformers]
***** link:/mule-user-guide/v/3.7/creating-flow-objects-and-transformers-using-annotations[Creating Flow Objects and Transformers Using Annotations]
***** link:/mule-user-guide/v/3.7/function-annotation[Function Annotation]
***** link:/mule-user-guide/v/3.7/groovy-annotation[Groovy Annotation]
***** link:/mule-user-guide/v/3.7/inboundattachments-annotation[InboundAttachments Annotation]
***** link:/mule-user-guide/v/3.7/inboundheaders-annotation[InboundHeaders Annotation]
***** link:/mule-user-guide/v/3.7/lookup-annotation[Lookup Annotation]
***** link:/mule-user-guide/v/3.7/mule-annotation[Mule Annotation]
***** link:/mule-user-guide/v/3.7/outboundattachments-annotation[OutboundAttachments Annotation]
***** link:/mule-user-guide/v/3.7/outboundheaders-annotation[OutboundHeaders Annotation]
***** link:/mule-user-guide/v/3.7/payload-annotation[Payload Annotation]
***** link:/mule-user-guide/v/3.7/schedule-annotation[Schedule Annotation]
***** link:/mule-user-guide/v/3.7/transformer-annotation[Transformer Annotation]
***** link:/mule-user-guide/v/3.7/xpath-annotation[XPath Annotation]
***** link:/mule-user-guide/v/3.7/creating-custom-transformer-classes[Creating Custom Transformer Classes]
*** link:/mule-user-guide/v/3.7/improving-performance-with-the-kryo-serializer[Improving Performance with the Kryo Serializer]
*** link:/mule-user-guide/v/3.7/datamapper-user-guide-and-reference[Datamapper User Guide and Reference]
**** link:/mule-user-guide/v/3.7/datamapper-concepts[DataMapper Concepts]
**** link:/mule-user-guide/v/3.7/datamapper-visual-reference[DataMapper Visual Reference]
**** link:/mule-user-guide/v/3.7/defining-datamapper-input-and-output-metadata[Defining DataMapper Input and Output Metadata]
**** link:/mule-user-guide/v/3.7/defining-metadata-using-edit-fields[Defining Metadata Using Edit Fields]
**** link:/mule-user-guide/v/3.7/pojo-class-bindings-and-factory-classes[POJO Class Bindings and Factory Classes]
**** link:/mule-user-guide/v/3.7/building-a-mapping-flow-in-the-graphical-mapping-editor[Building a Mapping Flow in the Graphical Mapping Editor]
**** link:/mule-user-guide/v/3.7/mapping-flow-input-and-output-properties[Mapping Flow Input and Output Properties]
**** link:/mule-user-guide/v/3.7/datamapper-input-error-policy-for-bad-input-data[DataMapper Input Error Policy for Bad Input Data]
**** link:/mule-user-guide/v/3.7/using-datamapper-lookup-tables[Using DataMapper Lookup Tables]
**** link:/mule-user-guide/v/3.7/streaming-data-processing-with-datamapper[Streaming Data Processing with DataMapper]
**** link:/mule-user-guide/v/3.7/updating-metadata-in-an-existing-mapping[Updating Metadata in an Existing Mapping]
**** link:/mule-user-guide/v/3.7/mapping-elements-inside-lists[Mapping Elements Inside Lists]
**** link:/mule-user-guide/v/3.7/previewing-datamapper-results-on-sample-data[Previewing DataMapper Results on Sample Data]
**** link:/mule-user-guide/v/3.7/datamapper-examples[DataMapper Examples]
**** link:/mule-user-guide/v/3.7/datamapper-supplemental-topics[DataMapper Supplemental Topics]
**** link:/mule-user-guide/v/3.7/choosing-mel-or-ctl2-as-scripting-engine[Choosing MEL or CTL2 as Scripting Engine]
**** link:/mule-user-guide/v/3.7/datamapper-fixed-width-input-format[DataMapper Fixed Width Input Format]
**** link:/mule-user-guide/v/3.7/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper Flat-to-Structured and Structured-to-Flat Mapping]
**** link:/mule-user-guide/v/3.7/including-the-datamapper-plugin[Including the DataMapper Plugin]
*** link:/mule-user-guide/v/3.7/error-handling[Error Handling]
**** link:/mule-user-guide/v/3.7/catch-exception-strategy[Catch Exception Strategy]
**** link:/mule-user-guide/v/3.7/choice-exception-strategy[Choice Exception Strategy]
**** link:/mule-user-guide/v/3.7/reference-exception-strategy[Reference Exception Strategy]
**** link:/mule-user-guide/v/3.7/rollback-exception-strategy[Rollback Exception Strategy]
**** link:/mule-user-guide/v/3.7/exception-strategy-most-common-use-cases[Exception Strategy Most Common Use Cases]
*** link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule Expression Language MEL]
**** link:/mule-user-guide/v/3.7/mel-cheat-sheet[MEL Cheat Sheet]
**** link:/mule-user-guide/v/3.7/mule-expression-language-basic-syntax[Mule Expression Language Basic Syntax]
**** link:/mule-user-guide/v/3.7/mule-expression-language-examples[Mule Expression Language Examples]
**** link:/mule-user-guide/v/3.7/mule-expression-language-reference[Mule Expression Language Reference]
***** link:/mule-user-guide/v/3.7/mule-expression-language-date-and-time-functions[Mule Expression Language Date and Time Functions]
**** link:/mule-user-guide/v/3.7/mule-expression-language-tips[Mule Expression Language Tips]
*** link:/mule-user-guide/v/3.7/datasense[DataSense]
**** link:/mule-user-guide/v/3.7/testing-connections[Testing Connections]
**** link:/mule-user-guide/v/3.7/using-perceptive-flow-design[Using Perceptive Flow Design]
**** link:/mule-user-guide/v/3.7/datasense-enabled-connectors[DataSense-enabled Connectors]
**** link:/mule-user-guide/v/3.7/using-the-datasense-explorer[Using the DataSense Explorer]
**** link:/mule-user-guide/v/3.7/datasense-query-editor[DataSense Query Editor]
**** link:/mule-user-guide/v/3.7/datasense-query-language[DataSense Query Language]
*** link:/mule-user-guide/v/3.7/business-events[Business Events]
*** link:/mule-user-guide/v/3.7/using-maven-with-mule[Using Maven with Mule]
**** link:/mule-user-guide/v/3.7/using-maven-in-anypoint-studio[Using Maven in Anypoint Studio]
***** link:/mule-user-guide/v/3.7/maven-support-in-anypoint-studio[Maven Support in Anypoint Studio]
***** link:/mule-user-guide/v/3.7/building-a-mule-application-with-maven-in-studio[Building a Mule Application with Maven in Studio]
***** link:/mule-user-guide/v/3.7/enabling-maven-support-for-a-studio-project[Enabling Maven Support for a Studio Project]
***** link:/mule-user-guide/v/3.7/importing-a-maven-project-into-studio[Importing a Maven Project into Studio]
**** link:/mule-user-guide/v/3.7/using-maven-in-mule-esb[Using Maven in Mule]
***** link:/mule-user-guide/v/3.7/configuring-maven-to-work-with-mule-esb[Configuring Maven to Work with Mule ESB]
***** link:/mule-user-guide/v/3.7/maven-tools-for-mule-esb[Maven Tools for Mule ESB]
***** link:/mule-user-guide/v/3.7/mule-maven-plugin[Mule Maven Plugin]
***** link:/mule-user-guide/v/3.7/mule-esb-plugin-for-maven[Mule ESB Plugin For Maven (deprecated)]
**** link:/mule-user-guide/v/3.7/maven-reference[Maven Reference]
*** link:/mule-user-guide/v/3.7/batch-processing[Batch Processing]
**** link:/mule-user-guide/v/3.7/batch-filters-and-batch-commit[Batch Filters and Batch Commit]
**** link:/mule-user-guide/v/3.7/batch-job-instance-id[Batch Job Instance ID]
**** link:/mule-user-guide/v/3.7/batch-processing-reference[Batch Processing Reference]
***** link:/mule-user-guide/v/3.7/using-mel-with-batch-processing[Using MEL with Batch Processing]
**** link:/mule-user-guide/v/3.7/batch-streaming-and-job-execution[Batch Streaming and Job Execution]
**** link:/mule-user-guide/v/3.7/record-variable[Record Variable]
*** link:/mule-user-guide/v/3.7/transaction-management[Transaction Management]
**** link:/mule-user-guide/v/3.7/single-resource-transactions[Single Resource Transactions]
**** link:/mule-user-guide/v/3.7/multiple-resource-transactions[Multiple Resource Transactions]
**** link:/mule-user-guide/v/3.7/xa-transactions[XA Transactions]
**** link:/mule-user-guide/v/3.7/using-bitronix-to-manage-transactions[Using Bitronix to Manage Transactions]
*** link:/mule-user-guide/v/3.7/the-properties-editor[The Properties Editor]
*** link:/mule-user-guide/v/3.7/importing-and-exporting-in-studio[Importing and Exporting in Studio]
*** link:/mule-user-guide/v/3.7/adding-and-removing-user-libraries[Adding and Removing User Libraries]
*** link:/mule-user-guide/v/3.7/changing-runtimes-in-studio[Changing Runtimes in Studio]
*** link:/mule-user-guide/v/3.7/starting-the-runtime-in-cluster-mode-in-studio[Starting the Runtime in Cluster Mode in Studio]
*** link:/mule-user-guide/v/3.7/shared-resources[Shared Resources]
**** link:/mule-user-guide/v/3.7/setting-environment-variables[Setting Environment Variables]
*** link:/mule-user-guide/v/3.7/mule-versus-web-application-server[Mule versus Web Application Server]
*** link:/mule-user-guide/v/3.7/publishing-and-consuming-apis-with-mule[Publishing and Consuming APIs with Mule]
**** link:/mule-user-guide/v/3.7/publishing-a-soap-api[Publishing a SOAP API]
***** link:/mule-user-guide/v/3.7/securing-a-soap-api[Securing a SOAP API]
***** link:/mule-user-guide/v/3.7/extra-cxf-component-configurations[Extra CXF Component Configurations]
**** link:/mule-user-guide/v/3.7/consuming-a-soap-api[Consuming a SOAP API]
**** link:/mule-user-guide/v/3.7/publishing-a-rest-api[Publishing a REST API]
**** link:/mule-user-guide/v/3.7/consuming-a-rest-api[Consuming a REST API]
***** link:/mule-user-guide/v/3.7/rest-api-examples[REST API Examples]
*** link:/mule-user-guide/v/3.7/advanced-usage-of-mule-esb[Advanced Usage of Mule ESB]
**** link:/mule-user-guide/v/3.7/storing-objects-in-the-registry[Storing Objects in the Registry]
**** link:/mule-user-guide/v/3.7/unifying-the-mule-registry[Unifying the Mule Registry]
**** link:/mule-user-guide/v/3.7/object-scopes[Object Scopes]
**** link:/mule-user-guide/v/3.7/using-mule-with-spring[Using Mule with Spring]
***** link:/mule-user-guide/v/3.7/sending-and-receiving-mule-events-in-spring[Sending and Receiving Mule Events in Spring]
***** link:/mule-user-guide/v/3.7/spring-application-contexts[Spring Application Contexts]
***** link:/mule-user-guide/v/3.7/using-spring-beans-as-flow-components[Using Spring Beans as Flow Components]
**** link:/mule-user-guide/v/3.7/dependency-injection[Dependency Injection]
**** link:/mule-user-guide/v/3.7/configuring-properties[Configuring Properties]
**** link:/mule-user-guide/v/3.7/creating-and-managing-a-cluster-manually[Creating and Managing a Cluster Manually]
**** link:/mule-user-guide/v/3.7/distributed-file-polling[Distributed File Polling]
**** link:/mule-user-guide/v/3.7/distributed-locking[Distributed Locking]
**** link:/mule-user-guide/v/3.7/streaming[Streaming]
**** link:/mule-user-guide/v/3.7/about-configuration-builders[About Configuration Builders]
**** link:/mule-user-guide/v/3.7/internationalizing-strings[Internationalizing Strings]
**** link:/mule-user-guide/v/3.7/bootstrapping-the-registry[Bootstrapping the Registry]
**** link:/mule-user-guide/v/3.7/tuning-performance[Tuning Performance]
**** link:/mule-user-guide/v/3.7/mule-agents[Mule Agents]
***** link:/mule-user-guide/v/3.7/agent-security-disabled-weak-ciphers[Agent Security: Disabled Weak Ciphers]
***** link:/mule-user-guide/v/3.7/jmx-management[JMX Management]
**** link:/mule-user-guide/v/3.7/flow-references.adoc[Flow References]
***** link:/mule-user-guide/v/3.7/flow-processing-strategies[Flow Processing Strategies]
**** link:/mule-user-guide/v/3.7/mule-object-stores[Mule Object Stores]
**** link:/mule-user-guide/v/3.7/configuring-reconnection-strategies[Configuring Reconnection Strategies]
**** link:/mule-user-guide/v/3.7/using-the-mule-client[Using the Mule Client]
**** link:/mule-user-guide/v/3.7/using-web-services[Using Web Services]
***** link:/mule-user-guide/v/3.7/proxying-web-services[Proxying Web Services]
***** link:/mule-user-guide/v/3.7/using-.net-web-services-with-mule[Using .NET Web Services with Mule]
**** link:/mule-user-guide/v/3.7/passing-additional-arguments-to-the-jvm-to-control-mule[Passing Additional Arguments to the JVM to Control Mule]
** link:/mule-user-guide/v/3.7/securing[Securing]
*** link:/mule-user-guide/v/3.7/anypoint-enterprise-security[Anypoint Enterprise Security]
**** link:/mule-user-guide/v/3.7/installing-anypoint-enterprise-security[Installing Anypoint Enterprise Security]
**** link:/mule-user-guide/v/3.7/mule-secure-token-service[Mule Secure Token Service]
***** link:/mule-user-guide/v/3.7/creating-an-oauth-2.0a-web-service-provider[Creating an OAuth 2.0a Web Service Provider]
***** link:/mule-user-guide/v/3.7/authorization-grant-types[Authorization Grant Types]
**** link:/mule-user-guide/v/3.7/mule-credentials-vault[Mule Credentials Vault]
**** link:/mule-user-guide/v/3.7/mule-message-encryption-processor[Mule Message Encryption Processor]
***** link:/mule-user-guide/v/3.7/pgp-encrypter[PGP Encrypter]
**** link:/mule-user-guide/v/3.7/mule-digital-signature-processor[Mule Digital Signature Processor]
**** link:/mule-user-guide/v/3.7/anypoint-filter-processor[Anypoint Filter Processor]
**** link:/mule-user-guide/v/3.7/mule-crc32-processor[Mule CRC32 Processor]
**** link:/mule-user-guide/v/3.7/anypoint-enterprise-security-example-application[Anypoint Enterprise Security Example Application]
**** link:/mule-user-guide/v/3.7/mule-sts-oauth-2.0a-example-application[Mule STS OAuth 2.0a Example Application]
*** link:/mule-user-guide/v/3.7/configuring-security[Configuring Security]
**** link:/mule-user-guide/v/3.7/configuring-the-spring-security-manager[Configuring the Spring Security Manager]
**** link:/mule-user-guide/v/3.7/component-authorization-using-spring-security[Component Authorization Using Spring Security]
**** link:/mule-user-guide/v/3.7/setting-up-ldap-provider-for-spring-security[Setting up LDAP Provider for Spring Security]
**** link:/mule-user-guide/v/3.7/upgrading-from-acegi-to-spring-security[Upgrading from Acegi to Spring Security]
**** link:/mule-user-guide/v/3.7/encryption-strategies[Encryption Strategies]
**** link:/mule-user-guide/v/3.7/pgp-security[PGP Security]
**** link:/mule-user-guide/v/3.7/jaas-security[Jaas Security]
**** link:/mule-user-guide/v/3.7/saml-module[SAML Module]
*** link:/mule-user-guide/v/3.7/fips-140-2-compliance-support[FIPS 140-2 Compliance Support]
** link:/mule-user-guide/v/3.7/debugging[Debugging]
*** link:/mule-user-guide/v/3.7/studio-visual-debugger[Studio Visual Debugger]
*** link:/mule-user-guide/v/3.7/configuring-mule-stacktraces[Configuring Mule Stacktraces]
*** link:/mule-user-guide/v/3.7/adding-source-attachments-to-studio[Adding Source Attachments to Studio]
*** link:/mule-user-guide/v/3.7/debugging-outside-studio[Debugging Outside Studio]
*** link:/mule-user-guide/v/3.7/logging[Logging]
** link:/mule-user-guide/v/3.7/testing[Testing]
*** link:/mule-user-guide/v/3.7/introduction-to-testing-mule[Introduction to Testing Mule]
*** link:/mule-user-guide/v/3.7/unit-testing[Unit Testing]
*** link:/mule-user-guide/v/3.7/functional-testing[Functional Testing]
*** link:/mule-user-guide/v/3.7/testing-strategies[Testing Strategies]
** link:/mule-user-guide/v/3.7/deploying[Deploying]
*** link:/mule-user-guide/v/3.7/starting-and-stopping-mule-esb[Starting and Stopping Mule ESB]
*** link:/mule-user-guide/v/3.7/deployment-scenarios[Deployment Scenarios]
**** link:/mule-user-guide/v/3.7/choosing-the-right-clustering-topology[Choosing the Right Clustering Topology]
**** link:/mule-user-guide/v/3.7/embedding-mule-in-a-java-application-or-webapp[Embedding Mule in a Java Application or Webapp]
**** link:/mule-user-guide/v/3.7/deploying-mule-to-jboss[Deploying Mule to JBoss]
***** link:/mule-user-guide/v/3.7/mule-as-mbean[Mule as MBean]
**** link:/mule-user-guide/v/3.7/deploying-mule-to-weblogic[Deploying Mule to WebLogic]
**** link:/mule-user-guide/v/3.7/deploying-mule-to-websphere[Deploying Mule to WebSphere]
**** link:/mule-user-guide/v/3.7/deploying-mule-as-a-service-to-tomcat[Deploying Mule as a Service to Tomcat]
**** link:/mule-user-guide/v/3.7/application-server-based-hot-deployment[Application Server Based Hot Deployment]
**** link:/mule-user-guide/v/3.7/classloader-control-in-mule[Classloader Control in Mule]
***** link:/mule-user-guide/v/3.7/fine-grain-classloader-control[Fine Grain Classloader Control]
*** link:/mule-user-guide/v/3.7/deploying-to-multiple-environments[Deploying to Multiple Environments]
*** link:/mule-user-guide/v/3.7/mule-high-availability-ha-clusters[Mule High Availability HA Clusters]
**** link:/mule-user-guide/v/3.7/evaluating-mule-high-availability-clusters-demo[Evaluating Mule High Availability Clusters Demo]
***** link:/mule-user-guide/v/3.7/1-installing-the-demo-bundle[1 - Installing the Demo Bundle]
***** link:/mule-user-guide/v/3.7/2-creating-a-cluster[2 - Creating a Cluster]
***** link:/mule-user-guide/v/3.7/3-deploying-an-application[3 - Deploying an Application]
***** link:/mule-user-guide/v/3.7/4-applying-load-to-the-cluster[4 - Applying Load to the Cluster]
***** link:/mule-user-guide/v/3.7/5-witnessing-failover[5 - Witnessing Failover]
***** link:/mule-user-guide/v/3.7/6-troubleshooting-and-next-steps[6 - Troubleshooting and Next Steps]
*** link:/mule-user-guide/v/3.7/mule-deployment-model[Mule Deployment Model]
**** link:/mule-user-guide/v/3.7/hot-deployment[Hot Deployment]
**** link:/mule-user-guide/v/3.7/application-deployment[Application Deployment]
**** link:/mule-user-guide/v/3.7/application-format[Application Format]
**** link:/mule-user-guide/v/3.7/mule-application-deployment-descriptor[Mule Application Deployment Descriptor]
***** link:/mule-user-guide/v/3.7/application-plugin-format[Application Plugin Format]
***** link:/mule-user-guide/v/3.7/mule-plugin-format[Mule Plugin Format]
*** link:/mule-user-guide/v/3.7/mule-server-notifications[Mule Server Notifications]
*** link:/mule-user-guide/v/3.7/profiling-mule[Profiling Mule]
*** link:/mule-user-guide/v/3.7/hardening-your-mule-installation[Hardening your Mule Installation]
*** link:/mule-user-guide/v/3.7/configuring-mule-for-different-deployment-scenarios[Configuring Mule for Different Deployment Scenarios]
**** link:/mule-user-guide/v/3.7/configuring-mule-as-a-linux-or-unix-daemon[Configuring Mule as a Linux or Unix Daemon]
**** link:/mule-user-guide/v/3.7/configuring-mule-as-a-windows-service[Configuring Mule as a Windows Service]
**** link:/mule-user-guide/v/3.7/configuring-mule-to-run-from-a-script[Configuring Mule to Run From a Script]
*** link:/mule-user-guide/v/3.7/preparing-a-gitignore-file[Preparing a gitignore File]
*** link:/mule-user-guide/v/3.7/using-subversion-with-studio[Using Subversion with Studio]
** link:/mule-user-guide/v/3.7/extending[Extending]
*** link:/mule-user-guide/v/3.7/extending-components[Extending Components]
*** link:/mule-user-guide/v/3.7/custom-message-processors[Custom Message Processors]
*** link:/mule-user-guide/v/3.7/creating-example-archetypes[Creating Example Archetypes]
*** link:/mule-user-guide/v/3.7/creating-a-custom-xml-namespace[Creating a Custom XML Namespace]
*** link:/mule-user-guide/v/3.7/creating-module-archetypes[Creating Module Archetypes]
*** link:/mule-user-guide/v/3.7/creating-catalog-archetypes[Creating Catalog Archetypes]
*** link:/mule-user-guide/v/3.7/creating-project-archetypes[Creating Project Archetypes]
*** link:/mule-user-guide/v/3.7/creating-transports[Creating Transports]
**** link:/mule-user-guide/v/3.7/transport-archetype[Transport Archetype]
**** link:/mule-user-guide/v/3.7/transport-service-descriptors[Transport Service Descriptors]
*** link:/mule-user-guide/v/3.7/creating-custom-routers[Creating Custom Routers]
** link:/mule-user-guide/v/3.7/reference[Reference]
*** link:/mule-user-guide/v/3.7/team-development-with-mule[Team Development with Mule]
**** link:/mule-user-guide/v/3.7/modularizing-your-configuration-files-for-team-development[Modularizing Your Configuration Files for Team Development]
**** link:/mule-user-guide/v/3.7/using-side-by-side-configuration-files[Using Side-by-Side Configuration Files]
**** link:/mule-user-guide/v/3.7/using-modules-in-your-application[Using Modules In Your Application]
**** link:/mule-user-guide/v/3.7/sharing-custom-code[Sharing Custom Code]
**** link:/mule-user-guide/v/3.7/sharing-custom-configuration-fragments[Sharing Custom Configuration Fragments]
**** link:/mule-user-guide/v/3.7/sharing-custom-configuration-patterns[Sharing Custom Configuration Patterns]
**** link:/mule-user-guide/v/3.7/sharing-applications[Sharing Applications]
**** link:/mule-user-guide/v/3.7/sustainable-software-development-practices-with-mule[Sustainable Software Development Practices with Mule]
***** link:/mule-user-guide/v/3.7/reproducible-builds[Reproducible Builds]
***** link:/mule-user-guide/v/3.7/continuous-integration[Continuous Integration]
*** link:/mule-user-guide/v/3.7/configuration-patterns[Configuration Patterns]
**** link:/mule-user-guide/v/3.7/understanding-mule-configuration[Understanding Mule Configuration]
***** link:/mule-user-guide/v/3.7/about-the-xml-configuration-file[About the XML Configuration File]
**** link:/mule-user-guide/v/3.7/choosing-between-flows-and-patterns[Choosing Between Flows and Patterns]
***** link:/mule-user-guide/v/3.7/using-flows-for-service-orchestration[Using Flows for Service Orchestration]
**** link:/mule-user-guide/v/3.7/using-mule-configuration-patterns[Using Mule Configuration Patterns]
***** link:/mule-user-guide/v/3.7/pattern-based-configuration[Pattern-Based Configuration]
***** link:/mule-user-guide/v/3.7/simple-service-pattern[Simple Service Pattern]
***** link:/mule-user-guide/v/3.7/bridge-pattern[Bridge Pattern]
***** link:/mule-user-guide/v/3.7/validator-pattern[Validator Pattern]
***** link:/mule-user-guide/v/3.7/web-service-proxy-pattern[Web Service Proxy Pattern]
***** link:/mule-user-guide/v/3.7/http-proxy-pattern[HTTP Proxy Pattern]
***** link:/mule-user-guide/v/3.7/about-mule-configuration[About Mule Configuration]
***** link:/mule-user-guide/v/3.7/understanding-enterprise-integration-patterns-using-mule[Understanding Enterprise Integration Patterns Using Mule]
***** link:/mule-user-guide/v/3.7/understanding-orchestration-using-mule[Understanding Orchestration Using Mule]
***** link:/mule-user-guide/v/3.7/understanding-configuration-patterns-using-mule[Understanding Configuration Patterns Using Mule]
***** link:/mule-user-guide/v/3.7/connecting-with-transports-and-connectors[Connecting with Transports and Connectors]
***** link:/mule-user-guide/v/3.7/using-mule-with-web-services[Using Mule with Web Services]
*** link:/mule-user-guide/v/3.7/filter-references[Filter References]
**** link:/mule-user-guide/v/3.7/idempotent-filter[Idempotent Filter]
*** link:/mule-user-guide/v/3.7/general-configuration-reference[General Configuration Reference]
**** link:/mule-user-guide/v/3.7/bpm-configuration-reference[BPM Configuration Reference]
**** link:/mule-user-guide/v/3.7/component-configuration-reference[Component Configuration Reference]
**** link:/mule-user-guide/v/3.7/endpoint-configuration-reference[Endpoint Configuration Reference]
***** link:/mule-user-guide/v/3.7/mule-endpoint-uris[Mule Endpoint URIs]
**** link:/mule-user-guide/v/3.7/exception-strategy-configuration-reference[Exception Strategy Configuration Reference]
**** link:/mule-user-guide/v/3.7/filters-configuration-reference[Filters Configuration Reference]
**** link:/mule-user-guide/v/3.7/global-settings-configuration-reference[Global Settings Configuration Reference]
**** link:/mule-user-guide/v/3.7/notifications-configuration-reference[Notifications Configuration Reference]
**** link:/mule-user-guide/v/3.7/properties-configuration-reference[Properties Configuration Reference]
**** link:/mule-user-guide/v/3.7/security-manager-configuration-reference[Security Manager Configuration Reference]
**** link:/mule-user-guide/v/3.7/transactions-configuration-reference[Transactions Configuration Reference]
*** link:/mule-user-guide/v/3.7/transports-reference[Transports Reference]
**** link:/mule-user-guide/v/3.7/connecting-using-transports[Connecting Using Transports]
***** link:/mule-user-guide/v/3.7/configuring-a-transport[Configuring a Transport]
**** link:/mule-user-guide/v/3.7/ajax-transport-reference[AJAX Transport Reference]
**** link:/mule-user-guide/v/3.7/ejb-transport-reference[EJB Transport Reference]
**** link:/mule-user-guide/v/3.7/email-transport-reference[Email Transport Reference]
**** link:/mule-user-guide/v/3.7/file-transport-reference[File Transport Reference]
**** link:/mule-user-guide/v/3.7/ftp-transport-reference[FTP Transport Reference]
**** link:/mule-user-guide/v/3.7/deprecated-http-transport-reference[HTTP Transport Reference]
**** link:/mule-user-guide/v/3.7/https-transport-reference[HTTPS Transport Reference]
**** link:/mule-user-guide/v/3.7/imap-transport-reference[IMAP Transport Reference]
**** link:/mule-user-guide/v/3.7/jdbc-transport-reference[JDBC Transport Reference]
**** link:/mule-user-guide/v/3.7/jetty-transport-reference[Jetty Transport Reference]
***** link:/mule-user-guide/v/3.7/jetty-ssl-transport[Jetty SSL Transport]
**** link:/mule-user-guide/v/3.7/jms-transport-reference[JMS Transport Reference]
***** link:/mule-user-guide/v/3.7/activemq-integration[ActiveMQ Integration]
***** link:/mule-user-guide/v/3.7/hornetq-integration[HornetQ Integration]
***** link:/mule-user-guide/v/3.7/open-mq-integration[Open MQ Integration]
***** link:/mule-user-guide/v/3.7/solace-jms[Solace JMS]
***** link:/mule-user-guide/v/3.7/tibco-ems-integration[Tibco EMS Integration]
**** link:/mule-user-guide/v/3.7/multicast-transport-reference[Multicast Transport Reference]
**** link:/mule-user-guide/v/3.7/pop3-transport-reference[POP3 Transport Reference]
**** link:/mule-user-guide/v/3.7/quartz-transport-reference[Quartz Transport Reference]
**** link:/mule-user-guide/v/3.7/rmi-transport-reference[RMI Transport Reference]
**** link:/mule-user-guide/v/3.7/servlet-transport-reference[Servlet Transport Reference]
**** link:/mule-user-guide/v/3.7/sftp-transport-reference[SFTP Transport Reference]
**** link:/mule-user-guide/v/3.7/smtp-transport-reference[SMTP Transport Reference]
**** link:/mule-user-guide/v/3.7/ssl-and-tls-transports-reference[SSL and TLS Transports Reference]
**** link:/mule-user-guide/v/3.7/stdio-transport-reference[STDIO Transport Reference]
**** link:/mule-user-guide/v/3.7/tcp-transport-reference[TCP Transport Reference]
**** link:/mule-user-guide/v/3.7/udp-transport-reference[UDP Transport Reference]
**** link:/mule-user-guide/v/3.7/vm-transport-reference[VM Transport Reference]
**** link:/mule-user-guide/v/3.7/mule-wmq-transport-reference[Mule WMQ Transport Reference]
**** link:/mule-user-guide/v/3.7/wsdl-connectors[WSDL Connectors]
**** link:/mule-user-guide/v/3.7/xmpp-transport-reference[XMPP Transport Reference]
*** link:/mule-user-guide/v/3.7/modules-reference[Modules Reference]
**** link:/mule-user-guide/v/3.7/object-store-module-reference[Object Store Module Reference]
**** link:/mule-user-guide/v/3.7/atom-module-reference[Atom Module Reference]
**** link:/mule-user-guide/v/3.7/bpm-module-reference[BPM Module Reference]
***** link:/mule-user-guide/v/3.7/drools-module-reference[Drools Module Reference]
***** link:/mule-user-guide/v/3.7/jboss-jbpm-module-reference[JBoss jBPM Module Reference]
**** link:/mule-user-guide/v/3.7/cxf-module-reference[CXF Module Reference]
***** link:/mule-user-guide/v/3.7/cxf-module-overview[CXF Module Overview]
***** link:/mule-user-guide/v/3.7/building-web-services-with-cxf[Building Web Services with CXF]
***** link:/mule-user-guide/v/3.7/consuming-web-services-with-cxf[Consuming Web Services with CXF]
***** link:/mule-user-guide/v/3.7/enabling-ws-addressing[Enabling WS-Addressing]
***** link:/mule-user-guide/v/3.7/enabling-ws-security[Enabling WS-Security]
***** link:/mule-user-guide/v/3.7/cxf-error-handling[CXF Error Handling]
***** link:/mule-user-guide/v/3.7/proxying-web-services-with-cxf[Proxying Web Services with CXF]
***** link:/mule-user-guide/v/3.7/supported-web-service-standards[Supported Web Service Standards]
***** link:/mule-user-guide/v/3.7/using-a-web-service-client-directly[Using a Web Service Client Directly]
***** link:/mule-user-guide/v/3.7/using-http-get-requests[Using HTTP GET Requests]
***** link:/mule-user-guide/v/3.7/using-mtom[Using MTOM]
***** link:/mule-user-guide/v/3.7/cxf-module-configuration-reference[CXF Module Configuration Reference]
**** link:/mule-user-guide/v/3.7/data-bindings-reference[Data Bindings Reference]
**** link:/mule-user-guide/v/3.7/jaas-module-reference[JAAS Module Reference]
**** link:/mule-user-guide/v/3.7/jboss-transaction-manager-reference[JBoss Transaction Manager Reference]
**** link:/mule-user-guide/v/3.7/jersey-module-reference[Jersey Module Reference]
**** link:/mule-user-guide/v/3.7/json-module-reference[JSON Module Reference]
**** link:/mule-user-guide/v/3.7/rss-module-reference[RSS Module Reference]
**** link:/mule-user-guide/v/3.7/scripting-module-reference[Scripting Module Reference]
**** link:/mule-user-guide/v/3.7/spring-extras-module-reference[Spring Extras Module Reference]
**** link:/mule-user-guide/v/3.7/sxc-module-reference[SXC Module Reference]
**** link:/mule-user-guide/v/3.7/xml-module-reference[XML Module Reference]
***** link:/mule-user-guide/v/3.7/domtoxml-transformer[DomToXml Transformer]
***** link:/mule-user-guide/v/3.7/jaxb-bindings[JAXB Bindings]
***** link:/mule-user-guide/v/3.7/jaxb-transformers[JAXB Transformers]
***** link:/mule-user-guide/v/3.7/jxpath-extractor-transformer[JXPath Extractor Transformer]
***** link:/mule-user-guide/v/3.7/xml-namespaces[XML Namespaces]
***** link:/mule-user-guide/v/3.7/xmlobject-transformers[XmlObject Transformers]
***** link:/mule-user-guide/v/3.7/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader Transformer]
***** link:/mule-user-guide/v/3.7/xquery-support[XQuery Support]
***** link:/mule-user-guide/v/3.7/xquery-transformer[XQuery Transformer]
***** link:/mule-user-guide/v/3.7/xslt-transformer[XSLT Transformer]
***** link:/mule-user-guide/v/3.7/xpath-extractor-transformer[XPath Extractor Transformer]
***** link:/mule-user-guide/v/3.7/xpath[XPath]
*** link:/mule-user-guide/v/3.7/non-mel-expressions-configuration-reference[Non-MEL Expressions Configuration Reference]
**** link:/mule-user-guide/v/3.7/using-non-mel-expressions[Using Non-MEL Expressions]
*** link:/mule-user-guide/v/3.7/creating-non-mel-expression-evaluators[Creating Non-MEL Expression Evaluators]
*** link:/mule-user-guide/v/3.7/schema-documentation[Schema Documentation]
**** link:/mule-user-guide/v/3.7/notes-on-mule-3.0-schema-changes[Notes on Mule 3.0 Schema Changes]
*** link:/mule-user-guide/v/3.7/mule-esb-3-and-test-api-javadoc[Mule ESB 3 and Test API Javadoc]
*** link:/mule-user-guide/v/3.7/mulesoft-security-update-policy[MuleSoft Security Update Policy]
